KotlinParser.java
// Generated from Kotlin.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KotlinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, IMPORT=24, 
		PACKAGE=25, CLASS=26, ABSTRACT=27, INTERFACE=28, OVERRIDE=29, FUN=30, 
		VAR=31, VAL=32, IF=33, ELSE=34, FOR=35, IN=36, IS=37, STEP=38, WHILE=39, 
		WHEN=40, ARROW=41, RETURN=42, NULL=43, TYPE1=44, TYPE2=45, LANGLE=46, 
		RANGLE=47, LPAREN=48, RPAREN=49, LCURL=50, RCURL=51, LSQUARE=52, RSQUARE=53, 
		COLON=54, COMMENT1=55, COMMENT2=56, OP=57, OP2=58, OP3=59, LP_RANGE=60, 
		ID=61, INT=62, REAL=63, STRING=64, WS=65;
	public static final int
		RULE_prog = 0, RULE_piPart = 1, RULE_mainPart = 2, RULE_packagePar = 3, 
		RULE_importPar = 4, RULE_piID = 5, RULE_prefixDef = 6, RULE_parameters = 7, 
		RULE_parameter = 8, RULE_commentPar = 9, RULE_type2Par = 10, RULE_type = 11, 
		RULE_funMain = 12, RULE_funPar = 13, RULE_colontype = 14, RULE_inFun = 15, 
		RULE_returnPar = 16, RULE_valPar = 17, RULE_varPar = 18, RULE_expr = 19, 
		RULE_assn = 20, RULE_con = 21, RULE_fun = 22, RULE_funName = 23, RULE_num = 24, 
		RULE_range = 25, RULE_con_expr = 26, RULE_con_expr_if = 27, RULE_con_expr_elseif = 28, 
		RULE_con_expr_else = 29, RULE_inCon_expr = 30, RULE_loop = 31, RULE_when_expr = 32, 
		RULE_whenPar = 33, RULE_classPar = 34, RULE_interfacePar = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "piPart", "mainPart", "packagePar", "importPar", "piID", "prefixDef", 
			"parameters", "parameter", "commentPar", "type2Par", "type", "funMain", 
			"funPar", "colontype", "inFun", "returnPar", "valPar", "varPar", "expr", 
			"assn", "con", "fun", "funName", "num", "range", "con_expr", "con_expr_if", 
			"con_expr_elseif", "con_expr_else", "inCon_expr", "loop", "when_expr", 
			"whenPar", "classPar", "interfacePar"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'.*'", "','", "'main'", "'?'", "'='", "'get()'", "'++'", 
			"'--'", "'!'", "'..'", "'0..'", "'1..'", "'2..'", "'3..'", "'4..'", "'5..'", 
			"'6..'", "'7..'", "'8..'", "'9..'", "'10..'", "'downTo'", "'import'", 
			"'package'", "'class'", "'abstract'", "'interface'", "'override'", "'fun'", 
			"'var'", "'val'", "'if'", "'else'", "'for'", "'in'", "'is'", "'step'", 
			"'while'", "'when'", "'->'", "'return'", "'null'", null, null, "'<'", 
			"'>'", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"IMPORT", "PACKAGE", "CLASS", "ABSTRACT", "INTERFACE", "OVERRIDE", "FUN", 
			"VAR", "VAL", "IF", "ELSE", "FOR", "IN", "IS", "STEP", "WHILE", "WHEN", 
			"ARROW", "RETURN", "NULL", "TYPE1", "TYPE2", "LANGLE", "RANGLE", "LPAREN", 
			"RPAREN", "LCURL", "RCURL", "LSQUARE", "RSQUARE", "COLON", "COMMENT1", 
			"COMMENT2", "OP", "OP2", "OP3", "LP_RANGE", "ID", "INT", "REAL", "STRING", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kotlin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KotlinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public PiPartContext piPart() {
			return getRuleContext(PiPartContext.class,0);
		}
		public MainPartContext mainPart() {
			return getRuleContext(MainPartContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			piPart();
			setState(73);
			mainPart();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PiPartContext extends ParserRuleContext {
		public List<PackageParContext> packagePar() {
			return getRuleContexts(PackageParContext.class);
		}
		public PackageParContext packagePar(int i) {
			return getRuleContext(PackageParContext.class,i);
		}
		public List<ImportParContext> importPar() {
			return getRuleContexts(ImportParContext.class);
		}
		public ImportParContext importPar(int i) {
			return getRuleContext(ImportParContext.class,i);
		}
		public PiPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piPart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitPiPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PiPartContext piPart() throws RecognitionException {
		PiPartContext _localctx = new PiPartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_piPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT || _la==PACKAGE) {
				{
				setState(77);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PACKAGE:
					{
					setState(75);
					packagePar();
					}
					break;
				case IMPORT:
					{
					setState(76);
					importPar();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainPartContext extends ParserRuleContext {
		public List<FunMainContext> funMain() {
			return getRuleContexts(FunMainContext.class);
		}
		public FunMainContext funMain(int i) {
			return getRuleContext(FunMainContext.class,i);
		}
		public List<FunParContext> funPar() {
			return getRuleContexts(FunParContext.class);
		}
		public FunParContext funPar(int i) {
			return getRuleContext(FunParContext.class,i);
		}
		public List<ClassParContext> classPar() {
			return getRuleContexts(ClassParContext.class);
		}
		public ClassParContext classPar(int i) {
			return getRuleContext(ClassParContext.class,i);
		}
		public List<InterfaceParContext> interfacePar() {
			return getRuleContexts(InterfaceParContext.class);
		}
		public InterfaceParContext interfacePar(int i) {
			return getRuleContext(InterfaceParContext.class,i);
		}
		public List<ValParContext> valPar() {
			return getRuleContexts(ValParContext.class);
		}
		public ValParContext valPar(int i) {
			return getRuleContext(ValParContext.class,i);
		}
		public List<VarParContext> varPar() {
			return getRuleContexts(VarParContext.class);
		}
		public VarParContext varPar(int i) {
			return getRuleContext(VarParContext.class,i);
		}
		public MainPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainPart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitMainPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainPartContext mainPart() throws RecognitionException {
		MainPartContext _localctx = new MainPartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << ABSTRACT) | (1L << INTERFACE) | (1L << OVERRIDE) | (1L << FUN) | (1L << VAR) | (1L << VAL))) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(82);
					funMain();
					}
					break;
				case 2:
					{
					setState(83);
					funPar();
					}
					break;
				case 3:
					{
					setState(84);
					classPar();
					}
					break;
				case 4:
					{
					setState(85);
					interfacePar();
					}
					break;
				case 5:
					{
					setState(86);
					valPar();
					}
					break;
				case 6:
					{
					setState(87);
					varPar();
					}
					break;
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageParContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(KotlinParser.PACKAGE, 0); }
		public PiIDContext piID() {
			return getRuleContext(PiIDContext.class,0);
		}
		public PackageParContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packagePar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitPackagePar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageParContext packagePar() throws RecognitionException {
		PackageParContext _localctx = new PackageParContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_packagePar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(PACKAGE);
			setState(94);
			piID();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportParContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(KotlinParser.IMPORT, 0); }
		public PiIDContext piID() {
			return getRuleContext(PiIDContext.class,0);
		}
		public ImportParContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitImportPar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportParContext importPar() throws RecognitionException {
		ImportParContext _localctx = new ImportParContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importPar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(IMPORT);
			setState(97);
			piID();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PiIDContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(KotlinParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(KotlinParser.ID, i);
		}
		public PiIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piID; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitPiID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PiIDContext piID() throws RecognitionException {
		PiIDContext _localctx = new PiIDContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_piID);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(ID);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(100);
				match(T__0);
				setState(101);
				match(ID);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(107);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixDefContext extends ParserRuleContext {
		public TerminalNode OVERRIDE() { return getToken(KotlinParser.OVERRIDE, 0); }
		public TerminalNode ABSTRACT() { return getToken(KotlinParser.ABSTRACT, 0); }
		public PrefixDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitPrefixDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixDefContext prefixDef() throws RecognitionException {
		PrefixDefContext _localctx = new PrefixDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_prefixDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OVERRIDE) {
				{
				setState(110);
				match(OVERRIDE);
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ABSTRACT) {
				{
				setState(113);
				match(ABSTRACT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			parameter();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(117);
				match(T__2);
				setState(118);
				parameter();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(KotlinParser.ID, 0); }
		public TerminalNode COLON() { return getToken(KotlinParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VAL() { return getToken(KotlinParser.VAL, 0); }
		public TerminalNode VAR() { return getToken(KotlinParser.VAR, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR || _la==VAL) {
				{
				setState(124);
				_la = _input.LA(1);
				if ( !(_la==VAR || _la==VAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(127);
			match(ID);
			setState(128);
			match(COLON);
			setState(129);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentParContext extends ParserRuleContext {
		public TerminalNode COMMENT1() { return getToken(KotlinParser.COMMENT1, 0); }
		public TerminalNode COMMENT2() { return getToken(KotlinParser.COMMENT2, 0); }
		public CommentParContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentPar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitCommentPar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentParContext commentPar() throws RecognitionException {
		CommentParContext _localctx = new CommentParContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_commentPar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !(_la==COMMENT1 || _la==COMMENT2) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type2ParContext extends ParserRuleContext {
		public TerminalNode TYPE2() { return getToken(KotlinParser.TYPE2, 0); }
		public TerminalNode LANGLE() { return getToken(KotlinParser.LANGLE, 0); }
		public TerminalNode TYPE1() { return getToken(KotlinParser.TYPE1, 0); }
		public TerminalNode RANGLE() { return getToken(KotlinParser.RANGLE, 0); }
		public Type2ParContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type2Par; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitType2Par(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type2ParContext type2Par() throws RecognitionException {
		Type2ParContext _localctx = new Type2ParContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_type2Par);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(TYPE2);
			setState(134);
			match(LANGLE);
			setState(135);
			match(TYPE1);
			setState(136);
			match(RANGLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TYPE1() { return getToken(KotlinParser.TYPE1, 0); }
		public Type2ParContext type2Par() {
			return getRuleContext(Type2ParContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE1:
				{
				setState(138);
				match(TYPE1);
				}
				break;
			case TYPE2:
				{
				setState(139);
				type2Par();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunMainContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(KotlinParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(KotlinParser.RPAREN, 0); }
		public InFunContext inFun() {
			return getRuleContext(InFunContext.class,0);
		}
		public PrefixDefContext prefixDef() {
			return getRuleContext(PrefixDefContext.class,0);
		}
		public TerminalNode FUN() { return getToken(KotlinParser.FUN, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ColontypeContext colontype() {
			return getRuleContext(ColontypeContext.class,0);
		}
		public FunMainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funMain; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinVisitor ) return ((KotlinVisitor<? extends T>)visitor).visitFunMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunMainContext funMain() throws RecognitionException {
		FunMainContext _localctx = new FunMainContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_funMain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(142);
				prefixDef();
				setState(143);
				match(FUN);
				}
				break;
			case 2:
				{
				setState(145);
				match(FUN);
				}
				break;
			}
			setState(148);
			match(T__3);
			setState(149);
			match(LPAREN);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << VAL) | (1L << ID))) != 0)) {
				{
				setState(150);
				parameters();
				}
			}

			setState(153);
			match(RPAREN);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(154);
				colontype();
				}
			}

			setState(157);
			inFun();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
